2005-07-09  David Hyatt  <hyatt@apple.com>

	Fix for bugzilla bug 3405, replace NodeImpl::Id with a new class,
	QualifiedName, to represent tag names (for DOM elements and CSS
	selectors).
	
        Reviewed by mjs

        * WebCore.pbproj/project.pbxproj:
        * khtml/css/css_base.cpp:
        (CSSSelector::anyTagName):
        (CSSSelector::print):
        (CSSSelector::specificity):
        (CSSSelector::selectorText):
        * khtml/css/css_base.h:
        (DOM::CSSNamespace::uri):
        (DOM::CSSNamespace::prefix):
        (DOM::CSSNamespace::namespaceForPrefix):
        (DOM::CSSSelector::CSSSelector):
        (DOM::CSSSelector::hasTag):
        * khtml/css/css_ruleimpl.cpp:
        * khtml/css/css_ruleimpl.h:
        * khtml/css/css_stylesheetimpl.cpp:
        (CSSStyleSheetImpl::addNamespace):
        (CSSStyleSheetImpl::determineNamespace):
        * khtml/css/css_stylesheetimpl.h:
        * khtml/css/cssparser.cpp:
        (CSSParser::CSSParser):
        (CSSParser::parseSheet):
        * khtml/css/cssparser.h:
        * khtml/css/cssstyleselector.cpp:
        (khtml::CSSStyleSelector::matchRules):
        (khtml::CSSStyleSelector::matchRulesForList):
        (khtml::CSSStyleSelector::canShareStyleWithElement):
        (khtml::CSSStyleSelector::adjustRenderStyle):
        (khtml::CSSStyleSelector::checkSelector):
        (khtml::CSSStyleSelector::checkOneSelector):
        (khtml::CSSRuleSet::addRule):
        * khtml/css/cssstyleselector.h:
        (khtml::CSSRuleSet::getTagRules):
        * khtml/css/parser.y:
        * khtml/dom/css_stylesheet.cpp:
        (LinkStyle::operator = ):
        (LinkStyle::sheet):
        * khtml/dom/dom_element.cpp:
        (Element::tagName):
        * khtml/dom/dom_node.cpp:
        (Node::namespaceURI):
        (Node::setPrefix):
        * khtml/dom/dom_node.h:
        * khtml/dom/html_base.cpp:
        (HTMLBodyElement::operator = ):
        (HTMLFrameElement::operator = ):